tests/miniJava/neg/005278_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] true java ( ) { return 0 ; } }
